--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "moviesapi",
   "version": "1.0.0",
   "description": "",
-  "main": "helloworld.js",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"npm:tsc-watch\" \"npm:start-server\"",
+    "start-server": "nodemon dist/app.js",
+    "tsc-watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,12 @@
   },
   "homepage": "https://github.com/neculautudor/moviesapi#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "concurrently": "^8.2.2",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
