--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "homepage": "https://github.com/neculautudor/moviesapi#readme",
   "dependencies": {
     "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-structure": "^7.15.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.5",
     "typescript": "^5.3.3"
   }
 }
