--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/neculautudor/moviesapi#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "pg-structure": "^7.15.0"
