--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
-    "pg-structure": "^7.15.0"
+    "pg-structure": "^7.15.0",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.19"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
